--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+.main {
+  width: 100%;
+  height: 100%;
+}
